<resources>
    <string name="app_name">Utomo</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--facebook-->
    <string name="facebook_app_id">186807128361684</string>

    <!--google-->
    <string name="project_id">950342667766</string>
    <string name="server_client_id">950342667766-tv9g153q2u7ga7qhg1nqboagth4go1b6.apps.googleusercontent.com</string>

    <integer name="duration_animation">350</integer>
    <string name="digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890</string>

    <!--dummy texts-->
    <string name="dummy1">Lorem Ipsum is simply dummy text</string>
    <string name="dummy2">It is a long established fact that a reader will be distracted</string>
    <string name="dummy3">Contrary to popular belief, Lorem Ipsum is not simply random text.</string>
    <string name="dummy4">There are many variations of passages of Lorem Ipsum available</string>
    <string name="dummy5">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>

    <string name="Rs">\u20B9</string>

    <string name="success">Your request received successfully. Please check status for this service under My Bookings.</string>
    <string name="review_success">Your review sent successfully. Thank you!</string>
    <string name="invite">Invite your friends and  earn points when they use this Referral Code.</string>

    <string name="share">Use Utomo app for your car service and share in your circle.</string>

    <string name="facebook_connection_cancelled">Facebook Connection Cancelled</string>
    <string name="facebook_connection_failed">Facebook Connection Failed</string>
    <string name="facebook_connection_error">Error Encountered While Login via Facebook</string>
    <string name="google_connection_failed">Google Connection Failed</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="facebook_success">Success</string>
    <string name="gcm_error">Google Services Not Found. Please Install/Update It</string>
    <string name="login_failed">Error Was Encountered While Login. Please Try Again.</string>
    <string name="login_successful">Login Successful</string>
    <string name="no_car">You haven\'t add any Car.</string>

    <string-array name="spinner_loading_array">
        <item>Loading..</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="ZipCode">ZipCode</string>

    <string name="urgent">Urgent Replacement</string>
    <string name="need">Need to Replacement</string>
    <string name="urgent_renew">Urgent Renew</string>
    <string name="renew">Need to Renew</string>
    <string name="ok">OK</string>
    <string name="excellent">Excellent</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="item_booking_add">Add</string>
    <string name="item_booking_edit">Edit</string>
    <string name="item_booking_delete">Delete</string>
    <string name="failed">Failed, Please Try again.</string>
    <string name="Success">Success</string>
    <string name="digits_text">[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz ]</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="inviteEarn">INVITE AND EARN</string>
    <string name="sponsored">Sponsored</string>

    <string name="ruppee">\u20B9</string>
    <string name="no_transactions">No Latest Transactions</string>
    <string name="view_all">View All Transactions</string>
    <string name="permission_camera_denied">Permission denied</string>
    <string name="permission_camera_neverask">Never askf or permission</string>
    <string name="no_internet_connection">No Internet Connections</string>
    <string name="time_out">Server Time out.</string>
    <string name="server_error">Server Error,Please try again later</string>

</resources>
