<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp">

        <com.alexzh.circleimageview.CircleImageView
            android:id="@+id/ImageView01"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/XL_TEXT" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Version 1.1.2.7"
            android:textSize="@dimen/S_TEXT" />


        <!--   <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="2dp">-->

        <!--   <com.alexzh.circleimageview.CircleImageView
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:layout_marginTop="10dp"
               android:layout_gravity="center_horizontal|top"
               android:src="@drawable/slider1" />-->


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txt1"
                    style="@style/MyAboutTextStyle"
                    android:text="@string/dummy1" />

                <TextView
                    android:id="@+id/txt2"
                    style="@style/MyAboutTextStyle"
                    android:text="@string/dummy2" />

                <TextView
                    android:id="@+id/txt3"
                    style="@style/MyAboutTextStyle"
                    android:text="@string/dummy3" />

                <TextView
                    android:id="@+id/txt4"
                    style="@style/MyAboutTextStyle"
                    android:text="@string/dummy4" />

                <TextView
                    android:id="@+id/txt5"
                    style="@style/MyAboutTextStyle"
                    android:text="@string/dummy5" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <!--   </FrameLayout>-->


    </LinearLayout>

</RelativeLayout>
